[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "uisc_quad_sim"
version = "0.0.1"
dependencies = [
    "numba>=0.60.0",
    "loguru>=0.7.3",
    "numpy>=1.26.4, <2.0.0",
    "PyYAML==6.0.2",
    "rerun-sdk==0.22.1",
    "matplotlib>=3.7.3",
    "scipy",
    "tqdm",
]
requires-python = ">=3.10"
authors = [
  {name = "Xu Lu", email = "lux@cqu.edu.cn"},
]
maintainers = [
  {name = "Xu Lu", email = "lux@cqu.edu.cn"},
]
description = "cqu uisc lab quadrotor simulator"
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
keywords = ["quadrotor", "simulator"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
